--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,8 +107,9 @@ jobs:
 
               # go into directory and copy data we're interested in to that directory
               cd built_website
-              echo "rsync built code with checked out code..."
+              echo "installing rsync..."
               apt-get -y install rsync
+              echo "rsync built code with checked out code..."
               rsync -r --exclude=.git --exclude=CNAME --exclude=LICENSE --exclude=README.md ../$HUGO_OUTPUT_FOLDER/ .
 
               echo "add files to git..."
