--- a/config.toml
+++ b/config.toml
@@ -40,7 +40,7 @@ baseName = "feed"
   # apple-touch-icon-precomposed.png, favicon.png, favicon.ico, and mstile.png.
   # These are stored in the favicon folder. See the following for more information:
   # https://github.com/audreyr/favicon-cheat-sheet
-  loadFavicon          = true
+  loadFavicon          = false
   faviconVersion       = ""
   # Sets Social Share links to appear on posts
   socialShare          = true
