--- a/config.toml
+++ b/config.toml
@@ -1,222 +1,255 @@
-baseurl = "https://luiyo.net"
-languageCode = "en-us"
-title = "Luiyología"
-theme = "hugo-future-imperfect"
-preserveTaxonomyNames = true
-paginate = 10
-disqusShortname = "luiyologia"
-googleAnalytics = "UA-555064-1"
-pluralizeListTitles = false
-
-[outputFormats]
-[outputFormats.RSS]
-mediatype = "application/rss"
-baseName = "feed"
+baseurl                 = "https://luiyo.net"
+DefaultContentLanguage  = "en"
+title                   = "Luiyología"
+theme                   = "hugo-future-imperfect-slim"
+preserveTaxonomyNames   = true
+paginate                = 10
+disqusShortname         = "luiyologia"
+googleAnalytics         = "UA-555064-1"
+pluralizeListTitles     = false
+disableLanguages        = [""]
 
 [params]
-  # Sets the meta tag description
-  description          = "The Science that studies my interests and concerns"
-  # Sets the navbarTitle that appears in the top left of the navigation bar
-  navbarTitle          = "Luiyología"
-  # Sets where "View More Posts" links
-  viewMorePostLink     = "/blog/"
+  mainSections = ["blog", "post"]
+  # Loads CSS and JavaScript files. The variable is an array so that you can load
+  # multiple/additional files if necessary. The standard theme files can be loaded
+  # by adding the value, "default". Default includes the add-on.css and and-on.js.
+  # Example: ["default", "/path/to/file"]
+  cssFiles              = ["default", "/css/luiyologia.css"]
+  jsFiles               = ["default"]
+  # Sets options for highlight.js
+  highlightjs           = true
+  highlightjsTheme      = "github"
+  highlightjsLang       = ["html", "css", "js", "toml"]
+  # Sets where "View More Posts" links to
+  viewMorePostsLink     = "/blog/"
+  # Activate Estimated Reading Times, which appear in the post headers
+  readingTime           = true
+  # Sets which Social Share links appear in posts.
+  # Options are twitter, facebook, reddit, linkedin, pinterest, email
+  socialShare           = ["twitter", "facebook", "reddit", "linkedin", "email"]
 
-# Optional Params
-  # Sets navbarTitle to match the section of the website
-  dynamicTitles        = true
-  # Sets RSS icons to appear on the sidebar with the social media buttons
-  rssAppearAtTop       = false
-  rssAppearAtBottom    = false
-  # Sets Social Media icons to appear on the sidebar
-  socialAppearAtTop    = true
-  socialAppearAtBottom = true
-  # Sets Categories to sort by number of posts instead of alphabetical
-  categoriesByCount    = true
-  # set to show or to hide categories in the sidebar
-  showSidebarCategories = false
-  # Sets Estimated Reading Time to appear in post headers
-  includeReadingTime   = true
-  # Sets the Favicon and Version for the site. Default support is for
-  # apple-touch-icon-precomposed.png, favicon.png, favicon.ico, and mstile.png.
-  # These are stored in the favicon folder. See the following for more information:
-  # https://github.com/audreyr/favicon-cheat-sheet
-  loadFavicon          = false
-  faviconVersion       = ""
-  # Sets Social Share links to appear on posts
-  socialShare          = true
-  # Sets specific share to appear on posts (default behavior is to appear)
-  socialShareTwitter   = true
-  socialShareGoogleplus = false
-  socialShareFacebook  = true
-  socialShareReddit    = true
-  socialShareLinkedin  = true
-  socialShareStumbleupon = false
-  socialSharePinterest = false
-  socialShareEmail     = true
+  [params.meta]
+    # Sets the meta tag description
+    description         = "The Science that studies my interests and concerns"
+    # Sets the meta tag author
+    author              = "Luis García Castro"
+    # If you would like to add more comprehensive favicon support passed root
+    # directory favicon.ico, utlize this funtion. It is recommened to use
+    # https://realfavicongenerator.net to generate your icons as that is the basis
+    # for the theme's naming.
+    favicon             = false
+    svg                 = true
+    faviconVersion      = "1"
+    msColor             = "#ffffff" # Copy from the https://realfavicongenerator.net
+    iOSColor            = "#ffffff" # Copy from the https://realfavicongenerator.net
 
-  # Load custom CSS or JavaScript files. The variable is an array so that you
-  # can load multiple files if necessary. You can also load the standard theme
-  # files by adding the value, "default".
-  # customCSS            = ["default", "/path/to/file"]
-  # customJS             = ["default", "/path/to/file"]
-  customCSS            = ["default", "/css/luiyologia.css"]
-  customJS             = ["default"]
-
-  # options for highlight.js (version, additional languages, and theme)
-  disable_highlight = true # set to true to disable Highlight
-  highlightjsVersion = "9.11.0"
-  highlightjsCDN = "//cdn.bootcss.com"
-  highlightjsLang = ["r", "yaml", "css"]
-  highlightjsTheme = "github"
-
-# Disqus will take priority over Staticman (github.com/eduardoboucas/staticman)
-# due to its ease of use. Feel free to check out both and decide what you would
-# prefer to use. See Staticman.yml for additional settings.
-[params.staticman]
-  # Sets Statiman to be active
-  staticman = false
-  # Sets the location for Staticman to connect to
-  username  = ""
-  repo      = ""
-  branch    = ""
-
-[params.staticman.recaptcha]
-  sitekey = "SITE_KEY"
-  secret  = "ENCRYPTED_SECRET"
+  [params.header]
+    # Sets the navbarTitle that appears in the top left of the navigation bar
+    navbarTitle         = "Luiyología"
+    # Sets navbarTitle to match the section of the website
+    dynamicTitles       = false
+    searchMenu          = true
+    shareMenu           = false
+    languageMenu        = false
 
   # These are optional params related to the sidebar. They are recommended, but not
   # required for proper functionality. HTML is supported within the params.
-[params.intro]
-  header    = ""
+  [params.intro]
+    header                = ""
+    paragraph             = "The Science that studies my interests and concerns"
+    rssIntro              = true
+    socialIntro           = true
 
-  paragraph = "The Science that studies my interests and concerns"
+    # This appears at the top of the sidebar above params.intro.header.
+    # A width of less than 100px is recommended from a design perspective.
+    [params.intro.pic]
+      src                 = "/img/main/Luiyologia-twitterlogo.png"
+      # Masks image in a certain shape. Supported are circle, triangle, diamond, and hexagon.
+      shape               = ""
+      width               = "300"
+      alt                 = "Luiyología"
 
-  about     = "Ludopath, technopath, cinephile, skeptic and, by every definition, early adopter"
+  [params.sidebar]
+    about               = "Ludopath, technopath, cinephile, skeptic and, by every definition, early adopter"
+    # Sets the number of recent posts to show in the sidebar. The default value is 5.
+    postAmount          = 5
+    # set to show or to hide categories in the sidebar
+    categories          = false
+    # Sets Categories to sort by number of posts instead of alphabetical
+    categoriesByCount   = true
 
-  # This appears at the top of the sidebar above params.intro.header.
-  # A width of less than 100px is recommended from a design perspective.
-  [params.intro.pic]
-    src       = "/img/main/Luiyologia-twitterlogo.png"
-    # Sets Image to be a cirlce
-    circle    = false
-    # Sets Image to be Future Imperfect's hexagon
-    imperfect = false
-    width     = "300"
-    alt       = "Luiyología"
+  [params.footer]
+    # Sets RSS icons to appear on the sidebar with the social media buttons
+    rssFooter           = false
+    # Sets Social Media icons to appear on the sidebar
+    socialFooter        = false
 
-[params.postAmount]
-  # Sets the number of recent posts to show in the sidebar. The default value is 5.
-  sidebar = 5
+[menu]
+  # Sets the menu items in the navigation bar
+  # Identifier prepends a Font Awesome icon to the menu item
+  [[menu.main]]
+    name              = "Home"
+    identifier        = "home"
+    url               = "https://luiyo.net/"
+    pre               = "<i class='fa fa-home'></i>"
+    weight            = 1
 
-# Sets the menu items in the navigation bar
-# Identifier prepends a Font Awesome icon to the menu item
-[[menu.main]]
-  name = "Home"
-  url = "https://luiyo.net/"
-  identifier = "fa fa-home"
-  weight = 1
+  [[menu.main]]
+    name              = "About"
+    identifier        = "about"
+    url               = "/about/"
+    pre               = "<i class='far fa-id-card'></i>"
+    weight            = 2
 
-[[menu.main]]
-  name = "About"
-  url = "/about/"
-  identifier = "fa fa-id-card-o"
-  weight = 2
+  [[menu.main]]
+    name              = "Blog"
+    identifier        = "blog"
+    url               = "/blog/"
+    pre               = "<i class='far fa-newspaper'></i>"
+    weight            = 3
 
-[[menu.main]]
-  name = "Blog"
-  url = "/blog/"
-  identifier = "fa fa-newspaper-o"
-  weight = 3
+  [[menu.main]]
+    name              = "Categories"
+    identifier        = "categories"
+    url               = "/categories/"
+    pre               = "<i class='fas fa-sitemap'></i>"
+    weight            = 4
 
-[[menu.main]]
-  name = "Categories"
-  url = "/categories/"
-  identifier = "fa fa-sitemap"
-  weight = 4
+  [[menu.main]]
+    name              = "Travel CV"
+    identifier        = "travelCV"
+    url               = "/travel-cv/"
+    pre               = "<i class='fas fa-globe-europe'></i>"
+    weight            = 5
 
-[[menu.main]]
-  name = "Travel CV"
-  url = "/travel-cv/"
-  identifier = "fa fa-globe"
-  weight = 5
+  [[menu.main]]
+    name              = "Talks"
+    identifier        = "talks"
+    url               = "/talks/"
+    pre               = "<i class='fas fa-microphone'></i>"
+    weight            = 6
 
-[[menu.main]]
-  name = "Talks"
-  url = "/talks/"
-  identifier = "fa fa-microphone"
-  weight = 6
+  [[menu.main]]
+    name              = "RSS"
+    identifier        = "rss"
+    url               = "/blog/feed.xml"
+    pre               = "<i class='fas fa-rss'></i>"
+    weight            = 7
 
-[[menu.main]]
-  name = "RSS"
-  url = "/blog/feed.xml"
-  identifier = "fa fa-rss"
-  weight = 7
+[Languages]
+  # Each language has its own menu.
+  [Languages.en]
+    LanguageCode        = "en"
+    LanguageName        = "English"
+    weight              = 1
+
+  [Languages.es]
+    LanguageCode        = "es"
+    LanguageName        = "Español"
+    title               = "Luiyología en Español"
+    description         = "La Ciencia que estudia mis intereses y preocupaciones"
+    weight              = 2
+
+    [[Languages.es.menu.main]]
+      name              = "Inicio"
+      identifier        = "home"
+      url               = "/"
+      pre               = "<i class='fas fa-home'></i>"
+      weight            = 1
+
+    [[Languages.es.menu.main]]
+      name              = "Acerca de"
+      identifier        = "about"
+      url               = "/about/"
+      pre               = "<i class='far fa-id-card'></i>"
+      weight            = 2
+
+    [[Languages.es.menu.main]]
+      name              = "Blog"
+      identifier        = "blog"
+      url               = "/blog/"
+      pre               = "<i class='far fa-newspaper'></i>"
+      weight            = 3
+
+    [[Languages.es.menu.main]]
+      name              = "Categorías"
+      identifier        = "categories"
+      url               = "/categories/"
+      pre               = "<i class='fas fa-sitemap'></i>"
+      weight            = 4
+
+    [[Languages.es.menu.main]]
+      name              = "Travel CV"
+      identifier        = "travelCV"
+      url               = "/travel-cv/"
+      pre               = "<i class='fas fa-globe-europe'></i>"
+      weight            = 5
+
+    [[Languages.es.menu.main]]
+      name              = "Charlas"
+      identifier        = "talks"
+      url               = "/talks/"
+      pre               = "<i class='fas fa-microphone'></i>"
+      weight            = 6
+
+    [[Languages.es.menu.main]]
+      name              = "RSS"
+      identifier        = "rss"
+      url               = "/blog/feed.xml"
+      pre               = "<i class='fas fa-rss'></i>"
+      weight            = 7
 
 
-#[[menu.main]]
-#  name = "Itemized"
-#  url = "/itemized/"
-#  identifier = "fa fa-list"
-#  weight = 5
-
-# [[menu.main]]
-#   name = "Contact"
-#   url = "/contact/"
-#   identifier = "fa fa-envelope-o"
-#   weight = 6
 
 # Sets Social Media icons to appear and link to your account. Value should be your
 # username unless otherwise noted. These are the icons affected by socialAppearAtTop
 # and socialAppearAtBottom.
 [social]
   # Coding Communities
-  github           = "luisgc"
-  gitlab           = ""
-  stackoverflow    = "" # User Number
-  bitbucket        = ""
-  jsfiddle         = ""
-  codepen          = ""
+  github                = "luisgc"
+  gitlab                = ""
+  stackoverflow         = "" # User Number
+  bitbucket             = ""
+  jsfiddle              = ""
+  codepen               = ""
   # Visual Art Communities
-  deviantart       = ""
-  flickr           = "luiyo"
-  behance          = ""
-  dribbble         = ""
+  deviantart            = ""
+  flickr                = "luiyo"
+  behance               = ""
+  dribbble              = ""
   # Publishing Communities
-  wordpress        = ""
-  medium           = ""
+  wordpress             = ""
+  medium                = ""
   # Professional/Business Oriented Communities
-  linkedin         = "luisgc"
-  linkedin_company = ""
-  foursquare       = ""
-  xing             = ""
-  slideshare       = "LuisGarcaCastro"
+  linkedin              = "luisgc"
+  linkedin_company      = ""
+  foursquare            = ""
+  xing                  = ""
+  slideshare            = "LuisGarcaCastro"
   # Social Networks
-  facebook         = ""
-  googleplus       = ""
-  reddit           = "Luiyo"
-  quora            = ""
-  youtube          = ""
-  vimeo            = ""
-  whatsapp         = "" # WhatsApp Number
+  facebook              = ""
+  googleplus            = ""
+  reddit                = "Luiyo"
+  quora                 = ""
+  youtube               = ""
+  vimeo                 = ""
+  whatsapp              = "" # WhatsApp Number
     # WeChat and QQ need testing.
-  wechat           = ""
-  qq               = "" # User ID Number
-  instagram        = ""
-  tumblr           = ""
-  twitter          = "luiyo"
-  skype            = ""
-  snapchat         = ""
-  pinterest        = ""
-  telegram         = ""
-  vine             = ""
-  googlescholar    = ""
-  orcid            = ""
-  researchgate     = ""
+    wechat              = ""
+    qq                  = "" # User ID Number
+  instagram             = ""
+  tumblr                = ""
+  twitter               = "luiyo"
+  skype                 = ""
+  snapchat              = ""
+  pinterest             = ""
+  telegram              = ""
+  vine                  = ""
+  googlescholar         = ""
+  orcid                 = ""
+  researchgate          = ""
+  keybase               = ""
+  mastodon              = ""
   # Email
-  email            = "luiyologia@gmail.com"
-
-[frontmatter]
-  date = ["date","publishDate", "lastmod"]
-  lastmod = ["lastmod", "date","publishDate"]
-  publishDate = ["publishDate", "date"]
-  expiryDate = ["expiryDate"]
+  email                 = "luiyologia@gmail.com"
