--- a/config.toml
+++ b/config.toml
@@ -27,7 +27,7 @@ disableLanguages        = [""]
   readingTime           = true
   # Sets which Social Share links appear in posts.
   # Options are twitter, facebook, reddit, linkedin, pinterest, email
-  socialShare           = ["twitter", "facebook", "reddit", "linkedin", "email"]
+  socialShare           = [""]
 
   [params.meta]
     # Sets the meta tag description
