hugo version fixed to 0.60.1

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
     # To see the list of pre-built images that CircleCI provides for most common languages see
     # https://circleci.com/docs/2.0/circleci-images/
     docker:
-    - image: cibuilds/hugo:latest
+    - image: cibuilds/hugo:0.60.1
     steps:
     # Machine Setup
     #   If you break your build into multiple jobs with workflows, you will probably want to do the parts of this that are relevant in each
@@ -55,6 +55,9 @@ jobs:
         - v1-dep-master-
         # Any branch if there are none on the default branch - this should be unnecessary if you have your default branch configured correctly
         - v1-dep-
+    - run:
+        name: "Checking Hugo version"
+        command: hugo version
 
     - run:
         name: "Build Website With Hugo"
