--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,11 +30,19 @@ jobs:
     # https://circleci.com/docs/2.0/circleci-images/
     docker:
     - image: cibuilds/hugo:0.60.1
+
     steps:
     # Machine Setup
     #   If you break your build into multiple jobs with workflows, you will probably want to do the parts of this that are relevant in each
     # The following `checkout` command checks out your code to your working directory. In 1.0 we did this implicitly. In 2.0 you can choose where in the course of a job your code should be checked out.
     - checkout
+
+    # Checking out the submodules as well
+    - run:
+        name: "Pull Submodules"
+        command: |
+          git submodule init
+          git submodule update --remote
     # Prepare for artifact and test results  collection equivalent to how it was done on 1.0.
     # In many cases you can simplify this from what is generated here.
     # 'See docs on artifact collection here https://circleci.com/docs/2.0/artifacts/'
@@ -61,7 +69,7 @@ jobs:
 
     - run:
         name: "Build Website With Hugo"
-        command: hugo -v -d docs --cleanDestinationDir --baseUrl=${BASE_URL}
+        command: hugo -v -d ${HUGO_OUTPUT_FOLDER} --cleanDestinationDir --baseUrl=${BASE_URL}
 
     # Save dependency cache
     - save_cache:
