--- a/config.toml
+++ b/config.toml
@@ -37,7 +37,7 @@ disableLanguages        = [""]
   removeBlur            = true
   # Sets which Social Share links appear in posts.
   # Options are twitter, facebook, reddit, linkedin, pinterest, email
-  socialShare           = ["twitter", "facebook", "reddit", "linkedin", "pinterest", "email"]
+  socialShare           = ["twitter", "facebook", "reddit", "linkedin", "email"]
   hideEmptyStats        = false
 
   [params.meta]
