--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,7 +89,7 @@ jobs:
     # Test
     #   This would typically be a build job when using workflows, possibly combined with build
     # This is based on your 1.0 configuration file or project settings
-    - run: hugo check
+    #  - run: hugo check
 
     # Deployment
     # Your existing circle.yml file contains deployment steps.
