--- a/config.toml
+++ b/config.toml
@@ -266,7 +266,7 @@ ignoreErrors = ["error-remote-getjson"]
     qq                  = "" # User ID Number
   instagram             = ""
   tumblr                = ""
-  twitter               = "luiyo"
+  twitter               = ""
   strava                = ""
   skype                 = ""
   snapchat              = ""
