--- a/config.toml
+++ b/config.toml
@@ -38,7 +38,7 @@ ignoreErrors = ["error-remote-getjson"]
   removeBlur            = true
   # Sets which Social Share links appear in posts.
   # Options are twitter, facebook, reddit, linkedin, pinterest, email
-  socialShare           = ["twitter", "facebook", "reddit", "linkedin", "email"]
+  socialShare           = ["reddit", "linkedin", "email"]
   hideEmptyStats        = false
 
   [params.meta]
